# GOV

./: .coverage  .env.local  .gitattributes  .gitignore  405错误修复报告.md  AGENTS.md  AI服务修复指南.md  AI检测范围说明.md  AI配置指南_GLM_DeepSeek.md  CHANGELOG.md  CHANGELOG_误报修复.md  CLEANUP_PLAN.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ai  GLM模型配置更新说明.md  HEALTHCHECK.md  Makefile  README.md  README_AI_ASSIST.md  ai_extractor_service.py  ai_extractor_service_v2.py  ai_vs_local_comparison.py  ai_vs_local_comparison_c83ab18e05198e43436c9a467f31addd.md  analyze_detection_issues.py  analyze_missing_second_table.py  check_ai_detection.py  compare_detection_results.py  comprehensive_analysis_report.md  coverage.xml  debug_config.py  debug_config_loading.py  debug_detailed_loading.py  debug_dual_mode.py  debug_engine_final.py  debug_engine_fixed.py  debug_engine_rules.py  debug_fixed_rules.py  debug_force_reload.py  debug_job_status.py  (+45 more)
api/: __init__.py  config.py  main.py  requirements.txt
app/: .env.local  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
config/: __init__.py  ai_models.py  app.yaml  providers.yaml  settings.py
docs/: API_DOCUMENTATION.md  DUAL_MODE_GUIDE.md
e2e/: playwright.config.ts
engine/: ai_validator.py  core_rules_engine.py  hybrid_pipeline.py  hybrid_validator.py  intelligent_merger.py  pipeline.py  robust_number_parser.py  rule_adapter.py  rules_v33.py  rules_v33.py.backup  rules_yaml_loader.py  table_alias_matcher.py  table_name_matcher.py  v33_ruleset_loader.py
gbc_yaml/: __init__.py
providers/: __init__.py  base.py  openai_compat.py  zhipu.py
reports/: alignment_17ec68d5dc42c6eace2675dc38f3442c.md  alignment_6207a48c197441630a7a62159700a257.md
rules/: ai_rules_v3_3.yaml  loader_ext.py  v3_3.yaml  v3_3_all_in_one.yaml
samples/: README.md  manifest.yaml
schemas/: __init__.py  (+1 more)
(+67 files in other folders)
